# email-newsletter

./: Cargo.toml
.github/workflows/: audit.yml  general.yml
migrations/: 20221130111545_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
