[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="email_newsletter"

[dependencies]
actix-web="4.2.1"
chrono = "0.4.23"
config = "0.13.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde ={version = "1.0.151", features = ["derive"]}
sqlx = {version="0.6.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
tokio = {version = "1.22.0", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-actix-web = "0.6.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = {version ="0.3.16", features = ["registry", "env-filter"]}
uuid = {version = "1.2.2", features = ["v4"]}

[dev-dependencies]
once_cell = "1.16.0"
reqwest = "0.11.13"
